# Prog2_23_24

./: Arduino.c  CMakeLists.txt  main.c  main.ilk  vaja1.c  vaja1.h  vaja2.c  vaja2.h  vaja3.c  vaja3.h  vaja4.c  vaja4.h  vaja5.c  vaja5.h  vaja6.c  vaja6.h  vaja7.c  vaja7.h  vaja8.c  vaja8.h  vaja9.c  vaja9.h
