cmake_minimum_required(VERSION 3.27)
project(23_24 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(23_24
        main.c
        vaja1.c
        vaja1.h
        vaja2.c
        vaja2.h
        vaja3.c
        vaja3.h
        vaja4.c
        vaja4.h
        vaja5.c
        vaja5.h
        vaja6.c
        vaja6.h
        vaja7.c
        vaja7.h
        vaja8.c
        vaja8.h
        vaja9.c
        vaja9.h)
